test/valid/58166_mathTest/mathTest.agu
-- Author: 58166, Manuel Campos

let mathTest (_) : Unit -> Bool =
    1 + 1 == 3

let main(_) : Unit -> Unit =
    print(mathTest(unit))