test/invalid-syntax/58166_lexicalProb/lexicalProb.agu
-- Author: 58166, Manuel Campos

let _ : Unit =
    let s : String = |badStringFormat|;